<resources>
    <string name="app_name">OCR App</string>
    <string name="hello">Hello</string>
    <string name="let_s_sign_you_up">Let\'s Sign You Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="continueee">Continue</string>
    <string name="continue_to_scan_your_id_to_complete_the_registration">Continue to scan your ID to complete the registration</string>
    <string name="you_re_almost_there">You\'re almost there...</string>
    <string name="fill_out_the_form_below_or_scan_your_id_to_automatically_fill_the_form">Fill out the form below or scan your ID to automatically fill the form</string>
    <string name="nik">NIK</string>
    <string name="name">Name</string>
    <string name="province">Province</string>
    <string name="region">Region</string>
    <string name="address">Address</string>
    <string name="scan_you_re_id">Scan you\'re ID</string>
    <string name="scan_your_id">Scan your ID</string>
    <string name="automatcally_fill_the_form_after_scanning_your_id">Automatcally fill the form after scanning your ID</string>
    <string name="we_re_happy_to_see_you">We\'re happy to see you</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register_now">Register Now</string>
    <string name="hello_capstone">Hello, Capstone</string>
    <string name="you_just_signed_in">You just signed in</string>

    <string name="fail_take_picture">Fail to take picture</string>
    <string name="fail_show_camera">Fail to show camera</string>
    <string name="let_s_take_a_picture">Let\'s Take A Picture</string>
    <string name="or_select_from_your_gallery">Or Select From Your Gallery</string>
    <string name="select_from_gallery">Select from gallery</string>
    <string name="upload">Upload</string>
    <string name="cancel">Cancel</string>
    <string name="_7370909xxxxxx">7370909xxxxxx</string>
    <string name="sembarang">sembarang</string>
    <string name="login_fail">Failed Login</string>
    <string name="login_success">Login Successfully</string>
    <string name="register_success">Account Created</string>
    <string name="register_fail">Failed Creating</string>
    <string name="token">eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJleHBpcmVzSW4iOiIxIHllYXJzIiwiYXVkaWVuY2UiOiJtb2JpbGUiLCJpc3N1ZXIiOiJiYWNrZW5kIiwiaWF0IjoxNjU1Mjk4ODQ1fQ._r5DlZobWk8pht9veDpWW_eyHcz7xQk1aZ4y1AjXfaU</string>
    <string name="getting_fail">Failed to get data</string>
    <string name="getting_success">Success to get data</string>
    <string name="upload_success">Upload Success</string>
    <string name="NIK">NIK</string>
    <string name="Nama">Nama</string>
    <string name="Alamat">Alamat</string>
    <string name="Provinsi">Provinsi</string>
    <string name="Kabupaten">Kabupaten</string>
    <string name="Agama">Agama</string>
    <string name="Jenis_Kelamin">Jenis Kelamin</string>
    <string name="Desa">Kelurahan</string>
    <string name="Pekerjaan">Pekerjaan</string>
    <string name="RT">RT/RW</string>
    <string name="TTL">Tempat Tanggal Lahir</string>
    <string name="Kecamatan">Kecamatan</string>
    <string name="detail_ktp">Detail KTP</string>
    <string name="Kewarganegaraan">Kewarganegaraan</string>
    <string name="konfigurasi">Konfirmasi</string>
    <string name="upload_failed">Failed to uploa</string>
    <string name="emaillll">aran@gmail.com</string>
    <string name="get_email">aran@gmail.com</string>
    <string name="uuu">Email</string>
    <string name="aran">Aran</string>
</resources>